# gtest.nvim

./: LICENSE  README.md
lua/gtest/: init.lua  telescope.lua  utils.lua
lua/telescope/_extensions/: gtest.lua
tests/: create-test-project.ps1  init.lua
tests/test-project/: CMakeLists.txt  conanfile.py  some-tests.cpp
